# customer-api-app

./: .gitignore  objdet.py  requirements.txt
app/: count_router.py  crud.py  database.py  main.py  models.py
app/routers/: customer_router.py
fastapi-sql-agent/: .gitignore
fastapi-sql-agent/app/: __init__.py  agent.py  database.py  llm.py  main.py  safety.py  settings.py
fastapi-sql-agent/tests/: test_agent.py  test_api.py  test_lifespan.py
sqlagent/: executor.py  main.py  sql_generator.py
text-to-sql/: ARCHITECTURE.md  PROJECT_COMPLETE.md  QUICK_REFERENCE.md  requirements.txt  sql_results.csv  test_decomp.csv  test_result.csv
text-to-sql/logs/: execution_log.jsonl
week2/: classmodeltasks.sql  docker-compose.yml  reflection1.txt
week2/app/: crud.py  main.py  models.py  schemas.py
week3/: query_decompositions.csv  sql_questions_only.csv  task1.md
week3/logs/: execution_log.jsonl
week3/task2-decomposetext/: QUERY_DECOMPOSITION_GUIDE.md  config.py  process_queries.py  query_decomp.py
week3/task3-generatesql/: INDEX.md  PIPELINE_SUMMARY.md  README.md  __init__.py  config.py  database.py  main.py  validator.py
week3/task4-fastapi/: .env.example  README.md  docker-compose.yml  pyproject.toml
week3/task4-fastapi/app/: agent.py  dependencies.py  llm.py  main.py  schemas.py
week3/task4-fastapi/docs/superpowers/plans/: 2026-05-20-fastapi-sql-agent.md
week3/task4-fastapi/docs/superpowers/specs/: 2026-05-20-fastapi-sql-agent-design.md
week3/task4-fastapi/tests/: test_agent.py  test_api.py  test_lifespan.py  test_safety.py
(+2 files in other folders)
