[project]
name = "fastapi-sql-agent"
version = "0.1.0"
description = "A FastAPI LangGraph SQL agent with safe SELECT execution and retry repair."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.6.0",
    "langgraph>=1.0.0",
    "langchain-openai>=0.2.0",
    "sqlglot>=26.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
